[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloomberg-mcp"
version = "1.2.1"
description = "Data access layer for Bloomberg Terminal via blpapi"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bloomberg", "finance", "market-data", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# blpapi must be installed separately: pip install blpapi
# Pre-built wheels available since 3.19.0; for older platforms,
# set BLPAPI_ROOT to the C++ SDK path before installing.
dependencies = [
    "mcp>=1.8.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
bloomberg-mcp = "bloomberg_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Documentation = "https://github.com/QmQsun/Bloomberg-MCP#readme"
Source = "https://github.com/QmQsun/Bloomberg-MCP"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bloomberg_mcp = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
